--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.10.0",
     "axios": "^1.7.2",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
+    "vue3-spinners": "^1.2.2",
     "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
